Update config.json with validated doc URLs
- Add indexUrl for discovery/research
- Update ASPIRE to use microsoft/aspire.dev mdx files
- Update BC to use dotnet/docs location
- Remove EF, SSG, API, RZ (no useful doc links)
- Remaining: CS, SYSLIB, NETSDK, CA, ASP, BL, MVC, RDG, ASPIRE,
  LOGGEN, METGEN, CTXOPTGEN, EXTEXP, EXTOBS, MSB, BC

--- a/config.json
+++ b/config.json
@@ -6,7 +6,8 @@
           "description": "C# compiler errors and warnings",
           "pattern": "^CS\\d{4}$",
           "helpUrl": "https://learn.microsoft.com/dotnet/csharp/language-reference/compiler-messages/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/csharp/language-reference/compiler-messages/{id}.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/csharp/language-reference/compiler-messages/{id}.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/csharp/language-reference/compiler-messages/index.md"
         }
       }
     },
@@ -16,7 +17,8 @@
           "description": "Runtime obsoletions, analyzers, and experimental APIs",
           "pattern": "^SYSLIB\\d{4}$",
           "helpUrl": "https://aka.ms/dotnet-warnings/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/fundamentals/syslib-diagnostics/{id}.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/fundamentals/syslib-diagnostics/{id}.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/runtime/main/docs/project/list-of-diagnostics.md"
         }
       }
     },
@@ -26,13 +28,15 @@
           "description": "SDK build and restore errors",
           "pattern": "^NETSDK\\d{4}$",
           "helpUrl": "https://learn.microsoft.com/dotnet/core/tools/sdk-errors/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/core/tools/sdk-errors/{id}.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/core/tools/sdk-errors/{id}.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/core/tools/sdk-errors/index.md"
         },
         "CA": {
           "description": "Code analysis quality rules",
           "pattern": "^CA\\d{4}$",
           "helpUrl": "https://learn.microsoft.com/dotnet/fundamentals/code-analysis/quality-rules/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/fundamentals/code-analysis/quality-rules/{id}.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/fundamentals/code-analysis/quality-rules/{id}.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/fundamentals/code-analysis/quality-rules/index.md"
         }
       }
     },
@@ -42,47 +46,29 @@
           "description": "ASP.NET Core framework analyzers",
           "pattern": "^ASP\\d{4}$",
           "helpUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/{id}.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/{id}.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/code-analysis.md"
         },
         "BL": {
           "description": "Blazor component diagnostics",
           "pattern": "^BL\\d{4}$",
           "helpUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/{id}.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/{id}.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/code-analysis.md"
         },
         "MVC": {
           "description": "MVC analyzers",
           "pattern": "^MVC\\d{4}$",
           "helpUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/{id}.md"
-        },
-        "API": {
-          "description": "MVC API analyzers",
-          "pattern": "^API\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/{id}.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/{id}.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/code-analysis.md"
         },
         "RDG": {
           "description": "Request Delegate Generator diagnostics",
           "pattern": "^RDG\\d{3}$",
           "helpUrl": "https://learn.microsoft.com/aspnet/core/fundamentals/aot/request-delegate-generator/diagnostics/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/fundamentals/aot/request-delegate-generator/diagnostics/{id}.md"
-        },
-        "SSG": {
-          "description": "SignalR Source Generator diagnostics",
-          "pattern": "^SSG\\d{4}$",
-          "helpUrl": null,
-          "markdownUrl": null
-        }
-      }
-    },
-    "efcore": {
-      "prefixes": {
-        "EF": {
-          "description": "Entity Framework Core diagnostics",
-          "pattern": "^EF\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/ef/core/what-is-new/ef-core-9.0/breaking-changes",
-          "markdownUrl": null
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/fundamentals/aot/request-delegate-generator/diagnostics/{id}.md",
+          "indexUrl": null
         }
       }
     },
@@ -91,8 +77,9 @@
         "ASPIRE": {
           "description": "Aspire hosting and configuration diagnostics",
           "pattern": "^ASPIRE\\d{3}$",
-          "helpUrl": "https://aka.ms/aspire/diagnostics/{id}",
-          "markdownUrl": null
+          "helpUrl": "https://learn.microsoft.com/dotnet/aspire/diagnostics/{id}",
+          "markdownUrl": "https://raw.githubusercontent.com/microsoft/aspire.dev/main/src/frontend/src/content/docs/diagnostics/{id}.mdx",
+          "indexUrl": "https://raw.githubusercontent.com/microsoft/aspire.dev/main/src/frontend/src/content/docs/diagnostics/overview.mdx"
         }
       }
     },
@@ -102,31 +89,36 @@
           "description": "LoggerMessage source generator diagnostics",
           "pattern": "^LOGGEN\\d{3}$",
           "helpUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
         },
         "METGEN": {
           "description": "Metrics source generator diagnostics",
           "pattern": "^METGEN\\d{3}$",
           "helpUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
         },
         "CTXOPTGEN": {
           "description": "Contextual options generator diagnostics",
           "pattern": "^CTXOPTGEN\\d{3}$",
           "helpUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
         },
         "EXTEXP": {
           "description": "Extensions experimental APIs",
           "pattern": "^EXTEXP\\d{4}$",
           "helpUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
         },
         "EXTOBS": {
           "description": "Extensions obsoletions",
           "pattern": "^EXTOBS\\d{4}$",
           "helpUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
-          "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
         }
       }
     },
@@ -136,23 +128,15 @@
           "description": "MSBuild errors and warnings",
           "pattern": "^MSB\\d{4}$",
           "helpUrl": "https://learn.microsoft.com/visualstudio/msbuild/errors/{id}",
-          "markdownUrl": null
+          "markdownUrl": "https://raw.githubusercontent.com/MicrosoftDocs/visualstudio-docs/main/docs/msbuild/errors/{id}.md",
+          "indexUrl": null
         },
         "BC": {
           "description": "MSBuild BuildCheck diagnostics",
           "pattern": "^BC\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/visualstudio/msbuild/errors/{id}",
-          "markdownUrl": null
-        }
-      }
-    },
-    "razor": {
-      "prefixes": {
-        "RZ": {
-          "description": "Razor compiler and analyzer diagnostics",
-          "pattern": "^RZ\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
-          "markdownUrl": null
+          "helpUrl": "https://learn.microsoft.com/dotnet/core/tools/buildcheck-rules/{id}",
+          "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/core/tools/buildcheck-rules/{id}.md",
+          "indexUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/core/tools/buildcheck-rules/index.md"
         }
       }
     }
