--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
         "CS": {
           "description": "C# compiler errors and warnings",
           "pattern": "^CS\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/dotnet/csharp/language-reference/compiler-messages/{id}",
+          "errorUrl": "https://learn.microsoft.com/dotnet/csharp/language-reference/compiler-messages/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/csharp/language-reference/compiler-messages/{id}.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/csharp/language-reference/compiler-messages/index.md"
         }
@@ -16,7 +16,7 @@
         "SYSLIB": {
           "description": "Runtime obsoletions, analyzers, and experimental APIs",
           "pattern": "^SYSLIB\\d{4}$",
-          "helpUrl": "https://aka.ms/dotnet-warnings/{id}",
+          "errorUrl": "https://aka.ms/dotnet-warnings/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/fundamentals/syslib-diagnostics/{id}.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/runtime/main/docs/project/list-of-diagnostics.md"
         }
@@ -27,14 +27,14 @@
         "NETSDK": {
           "description": "SDK build and restore errors",
           "pattern": "^NETSDK\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/dotnet/core/tools/sdk-errors/{id}",
+          "errorUrl": "https://learn.microsoft.com/dotnet/core/tools/sdk-errors/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/core/tools/sdk-errors/{id}.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/core/tools/sdk-errors/index.md"
         },
         "CA": {
           "description": "Code analysis quality rules",
           "pattern": "^CA\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/dotnet/fundamentals/code-analysis/quality-rules/{id}",
+          "errorUrl": "https://learn.microsoft.com/dotnet/fundamentals/code-analysis/quality-rules/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/fundamentals/code-analysis/quality-rules/{id}.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/fundamentals/code-analysis/quality-rules/index.md"
         }
@@ -45,28 +45,28 @@
         "ASP": {
           "description": "ASP.NET Core framework analyzers",
           "pattern": "^ASP\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
+          "errorUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/{id}.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/code-analysis.md"
         },
         "BL": {
           "description": "Blazor component diagnostics",
           "pattern": "^BL\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
+          "errorUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/{id}.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/code-analysis.md"
         },
         "MVC": {
           "description": "MVC analyzers",
           "pattern": "^MVC\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
+          "errorUrl": "https://learn.microsoft.com/aspnet/core/diagnostics/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/{id}.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/diagnostics/code-analysis.md"
         },
         "RDG": {
           "description": "Request Delegate Generator diagnostics",
           "pattern": "^RDG\\d{3}$",
-          "helpUrl": "https://learn.microsoft.com/aspnet/core/fundamentals/aot/request-delegate-generator/diagnostics/{id}",
+          "errorUrl": "https://learn.microsoft.com/aspnet/core/fundamentals/aot/request-delegate-generator/diagnostics/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/AspNetCore.Docs/main/aspnetcore/fundamentals/aot/request-delegate-generator/diagnostics/{id}.md",
           "indexUrl": null
         }
@@ -77,7 +77,7 @@
         "ASPIRE": {
           "description": "Aspire hosting and configuration diagnostics",
           "pattern": "^ASPIRE\\d{3}$",
-          "helpUrl": "https://learn.microsoft.com/dotnet/aspire/diagnostics/{id}",
+          "errorUrl": "https://learn.microsoft.com/dotnet/aspire/diagnostics/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/microsoft/aspire.dev/main/src/frontend/src/content/docs/diagnostics/{id}.mdx",
           "indexUrl": "https://raw.githubusercontent.com/microsoft/aspire.dev/main/src/frontend/src/content/docs/diagnostics/overview.mdx"
         }
@@ -88,35 +88,35 @@
         "LOGGEN": {
           "description": "LoggerMessage source generator diagnostics",
           "pattern": "^LOGGEN\\d{3}$",
-          "helpUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
+          "errorUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
         },
         "METGEN": {
           "description": "Metrics source generator diagnostics",
           "pattern": "^METGEN\\d{3}$",
-          "helpUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
+          "errorUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
         },
         "CTXOPTGEN": {
           "description": "Contextual options generator diagnostics",
           "pattern": "^CTXOPTGEN\\d{3}$",
-          "helpUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
+          "errorUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
         },
         "EXTEXP": {
           "description": "Extensions experimental APIs",
           "pattern": "^EXTEXP\\d{4}$",
-          "helpUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
+          "errorUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
         },
         "EXTOBS": {
           "description": "Extensions obsoletions",
           "pattern": "^EXTOBS\\d{4}$",
-          "helpUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
+          "errorUrl": "https://aka.ms/dotnet-extensions-warnings/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/extensions/main/docs/list-of-diagnostics.md"
         }
@@ -127,14 +127,14 @@
         "MSB": {
           "description": "MSBuild errors and warnings",
           "pattern": "^MSB\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/visualstudio/msbuild/errors/{id}",
+          "errorUrl": "https://learn.microsoft.com/visualstudio/msbuild/errors/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/MicrosoftDocs/visualstudio-docs/main/docs/msbuild/errors/{id}.md",
           "indexUrl": null
         },
         "BC": {
           "description": "MSBuild BuildCheck diagnostics",
           "pattern": "^BC\\d{4}$",
-          "helpUrl": "https://learn.microsoft.com/dotnet/core/tools/buildcheck-rules/{id}",
+          "errorUrl": "https://learn.microsoft.com/dotnet/core/tools/buildcheck-rules/{id}",
           "markdownUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/core/tools/buildcheck-rules/{id}.md",
           "indexUrl": "https://raw.githubusercontent.com/dotnet/docs/main/docs/core/tools/buildcheck-rules/index.md"
         }
